--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     Free forever for unlimited transactions. 
   </div>
   
-   <form>
+   <form netlify>
      <div class='w-100 bb'>
-      <input class='w-75' type="email" placeholder="Email Address" ata-netlify="sign-me-up">
+      <input class='w-75' name="email" type="email" placeholder="Email Address" ata-netlify="sign-me-up">
       </input>
       <button class="w-25 submit" type="submit">Sign Me Up</button>
      </div>
