--- a/index.html
+++ b/index.html
@@ -1,63 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACB</title>
-    <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ACB</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    <header class="flex">
-    <h1>ACB</h1>
-    <div class='buttons'>
+  <header>
+    <div class="flex align-end">
+      <div class="em">ACB</div>
+      <div class="nav">
+        <nav class='nav-flex'>
+          <a href="about.html">
+            Product
+          </a>
+          <a href="sales.html">
+            Sales
+          </a>
+        </nav>
+      </div>
+      <div class='buttons'>
         <a href="signup.htm" class="btn">Sign up </a>
         <a href="signin.htm" class="btn inverted">Log In</a>
+      </div>
     </div>
-    </header>
-
-<div class="container big">
-  <div class='half'>
-  <div class='prompt'>
-  Calculate the adjusted cost base in minutes. 
-    <br/><br/>
-    Free forever for unlimited transactions. 
+  </header>
+  <div class="jumbo">
+    <div class="center">
+      <h1>ACB makes it <span class='yellow'>downright simple</span><br />
+        to track capital gains.
+      </h1>
+    </div>
   </div>
-  
-   <form netlify>
-     <div class='w-100 bb'>
-      <input class='w-75' name="email" type="email" placeholder="Email Address" ata-netlify="sign-me-up">
-      </input>
-      <button class="w-25 submit" type="submit">Sign Me Up</button>
-     </div>
-    </form>
+
+  <div class="container big">
+    <div class='half'>
+      <div class='prompt'>
+        Calculate the adjusted cost base in minutes.
+        <br /><br />
+        Free forever for unlimited transactions.
+      </div>
+
+      <form netlify>
+        <div class='d-flex w-100 bb'>
+          <input class='w-75' name="email" type="email" placeholder="Email Address" ata-netlify="sign-me-up">
+          </input>
+          <button class="w-25 submit" type="submit">Sign Me Up</button>
+        </div>
+      </form>
     </div>
     <div class='w-100'>
 
     </div>
-    <div>
-        <h2>WHat is ACB?</h2>
-        
+    <div class='w-50'>
+      <h2>What is ACB?</h2>
+      <p>
+        ACB, or adjusted cost base, is a method for calculating capital gains and losses 
+        ond sales of a certain glass of goods known as identical properties, among other
+        things. The most common example would be units of a mutal fund, cryptocurrency, or
+        some other non-unique item. It also includes property. Calculating the ACB 
+        takes time and effort, but this app desires to make it simple to track your 
+        gains and losses over time, automatically generate appropriate tax forms, 
+        and more, all for FREE!
+      </p>
     </div>
-</div>
+    <div class="w-50">
+      <table>
+        <thead>
+          <tr>
+            <th>
+              Date
+            </th>
+            <th>
+              Units
+            </th>
+            <th>
+              Price
+            </th>
+            <th>
+              ACB
+            </th>
+            <th>
+              Gains (Losses)
+            </th>
+            <th>
+              Shares
+            </th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </div>
 
-<footer>
-  <div class='container'>
-  <div class="col">
-    <b>About</b>
-    <nav>
-      Our team
-    </nav>
-  </div>
-  <div class="col">
-    <b>Sales</b><nav>Who are we kidding? It's free!</nav></div>
-  <div class="col">Developers</div>
-  <div class="col">Contact</div>
-  <div class='w-100'></div>
-  <div class="m-auto">
-    (c) 2021 ACB - Repository - Terms - Privacy 
-  </div>
-  </div>
-</fotter>
+  <footer>
+    <div class='container'>
+      <div class="col">
+        <b>About</b>
+        <nav>
+          Our team<br/>
+          Our story
+        </nav>
+      </div>
+      <div class="col">
+        <b>Sales</b>
+        <nav>Who are we kidding? It's free!</nav>
+      </div>
+      <div class="col">Developers</div>
+      <div class="col">
+        <b>Stay in Touch</b>
+        <nav>
+          <a href="https://www.facebook.com/acb-app">
+            Facebook
+          </a><br>
+          <a href="https://twitter.com/acb-app">
+            Twitter
+          </a><br />
+          <a href="https://instagram.com/acb-app">
+            Instagram
+          </a><br />
+          <a href="https://github.com/acb-app">
+            GitHub
+          </a>
+        </nav>
+      </div>
+      <div class='w-100'></div>
+      <div class="m-auto">
+        (c) 2021 ACB - Repository - Terms - Privacy
+      </div>
+    </div>
+    </fotter>
 </body>
+
 </html>
