--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
       </div>
       <div class="col">Developers</div>
       <div class="col">
-        <b>Stay in Touch</b>
+        <b>Get in Touch</b>
         <nav>
-          <a href="https://www.facebook.com/acb-app">
+          <a href="https://www.facebook.com/acbapp" target="_blank">
             Facebook
           </a><br>
-          <a href="https://twitter.com/acb-app">
+          <a href="https://twitter.com/acb_app" target="_blank">
             Twitter
           </a><br />
           <a href="https://instagram.com/acb-app">
             Instagram
           </a><br />
-          <a href="https://github.com/acb-app">
+          <a href="https://github.com/acbapp" target="_blank" >
             GitHub
           </a>
         </nav>
