--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ACB</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -58,83 +59,160 @@
     <div class='w-100'>
 
     </div>
-    <div class='w-50'>
-      <h2>What is ACB?</h2>
-      <p>
-        ACB, or adjusted cost base, is a method for calculating capital gains and losses 
-        ond sales of a certain glass of goods known as identical properties, among other
-        things. The most common example would be units of a mutal fund, cryptocurrency, or
-        some other non-unique item. It also includes property. Calculating the ACB 
-        takes time and effort, but this app desires to make it simple to track your 
-        gains and losses over time, automatically generate appropriate tax forms, 
-        and more, all for FREE!
-      </p>
-    </div>
-    <div class="w-50">
-      <table>
-        <thead>
-          <tr>
-            <th>
-              Date
-            </th>
-            <th>
-              Units
-            </th>
-            <th>
-              Price
-            </th>
-            <th>
-              ACB
-            </th>
-            <th>
-              Gains (Losses)
-            </th>
-            <th>
-              Shares
-            </th>
-          </tr>
-        </thead>
-      </table>
-    </div>
+    <div class="row">
+      <div class='col-sm-12 col-md-6'>
+        <h2>What is ACB?</h2>
+        <p>
+          ACB, or adjusted cost base, is a method for calculating capital gains and losses 
+          ond sales of a certain glass of goods known as identical properties, among other
+          things. The most common example would be units of a mutal fund, cryptocurrency, or
+          some other non-unique item. It also includes property. Calculating the ACB 
+          takes time and effort, but this app desires to make it simple to track your 
+          gains and losses over time, automatically generate appropriate tax forms, 
+          and more, all for FREE!
+        </p>
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <table class="table table-responsive">
+          <thead>
+            <tr>
+              <th>
+                Action
+              </th>
+              <th>
+                Date
+              </th>
+              <th>
+                Units
+              </th>
+              <th>
+                Price
+              </th>
+              <th>
+                ACB
+              </th>
+              <th>
+                Gains (Losses)
+              </th>
+              <th>
+                Shares
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                BUY
+              </td>
+              <td>
+                2021-03-07
+              </td>
+              <td>
+                4
+              </td>
+              <td>
+                $5
+              </td>
+              <td>
+                $20
+              </td>
+              <td>
+                - 
+              </td>
+              <td>
+                4
+              </td>
+            </tr>
+            <tr>
+              <td>
+                BUY
+              </td>
+              <td>
+                2021-03-16
+              </td>
+              <td>
+                4
+              </td>
+              <td>
+                $6
+              </td>
+              <td>
+                $44
+              </td>
+              <td>
+                - 
+              </td>
+              <td>
+                8
+              </td>
+            </tr>
+            <tr>
+              <td>
+                SELL
+              </td>
+              <td>
+                2021-03-07
+              </td>
+              <td>
+                8
+              </td>
+              <td>
+                $7
+              </td>
+              <td>
+                $0
+              </td>
+              <td>
+                 $12
+              </td>
+              <td>0
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  </div>
   </div>
 
   <footer>
-    <div class='container'>
-      <div class="col">
-        <b>About</b>
-        <nav>
-          Our team<br/>
-          Our story
-        </nav>
-      </div>
-      <div class="col">
-        <b>Sales</b>
-        <nav>Who are we kidding? It's free!</nav>
-      </div>
-      <div class="col">Developers</div>
-      <div class="col">
-        <b>Get in Touch</b>
-        <nav>
-          <a href="https://www.facebook.com/acbapp" target="_blank">
-            Facebook
-          </a><br>
-          <a href="https://twitter.com/acb_app" target="_blank">
-            Twitter
-          </a><br />
-          <a href="https://instagram.com/acb-app">
-            Instagram
-          </a><br />
-          <a href="https://github.com/acbapp" target="_blank" >
-            GitHub
-          </a>
-        </nav>
-      </div>
-      <div class='w-100'></div>
-      <div class="m-auto">
-        (c) 2021 ACB - Repository - Terms - Privacy
+    <div class='container w-100'>
+      <div class="w-100 d-flex flex-wrap">
+        <div class="col-sm-12 col-md-3">
+          <b>About</b>
+          <nav>
+            Our team<br/>
+            Our story
+          </nav>
+        </div>
+        <div class="col-sm-12 col-md-3">
+          <b>Sales</b>
+          <nav>Who are we kidding? It's free!</nav>
+        </div>
+        <div class="col-sm-12 col-md-3">Developers</div>
+        <div class="col-sm-12 col-md-3">
+          <b>Get in Touch</b>
+          <nav>
+            <a href="https://www.facebook.com/acbapp" target="_blank">
+              Facebook
+            </a><br>
+            <a href="https://twitter.com/acb_app" target="_blank">
+              Twitter
+            </a><br />
+            <a href="https://instagram.com/acb-app">
+              Instagram
+            </a><br />
+            <a href="https://github.com/acbapp" target="_blank" >
+              GitHub
+            </a>
+          </nav>
+        </div>
+        <div class='w-100'></div>
+        <div class="m-auto">
+          (c) 2021 ACB - Repository - Terms - Privacy
+        </div>
       </div>
     </div>
     </fotter>
 </body>
 
-</html>
+</html> 
