--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
 
 </head>
 
@@ -45,23 +47,27 @@
 
   <div class="container">
     <div class="row">
-      <div class='col-6 card rounder'>
-        <div class='card-body'>
-          <div class='card-text'>
-            <h2 class="font-weight-900">Sign up to get notified when the app goes live</h2>
-            Calculate the adjusted cost base in minutes.
-            <br /><br />
-            Free forever for unlimited transactions.
-            <br/>
-            <form netlify>
-              <div class='row mt-3'>
-                <input class="col-7" name="email" type="email" placeholder="Email Address" ata-netlify="sign-me-up">
-                </input>
-                <button class="col-5 submit text-size-lg" class="btn btn-block" type="submit">Sign Me Up</button>
-              </div>
-            </form>
+      <div class='col-sm-12 col-md-2 '></div>
+      <div class='sol-sm-12 col-md-8'>
+        <div class='card rounder'>
+          <div class='card-body'>
+            <div class='card-text p-2'>
+              <h2 class="font-weight-900">Sign up to get notified when the app goes live</h2>
+              Calculate the adjusted cost base in minutes.
+              <br /><br />
+              Free forever for unlimited transactions.
+              <br/>
+              <form netlify>
+                <div class='row mt-3'>
+                  <input class="col-7" name="email" type="email" placeholder="Email Address" ata-netlify="sign-me-up">
+                  </input>
+                  <button class="col-5 submit text-size-lg" class="btn btn-block" type="submit">Sign Me Up</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
+        <div class='col-sm-12 col-md-2 '></div>
       </div>
       <div class="col-12"></div>
       <div class='col-sm-12 col-md-6 mt-3 pad'>
@@ -174,6 +180,16 @@
             </tr>
           </tbody>
         </table>
+      </div>
+      <div class="checks">
+          Calculate your adjusted cost base for: <br/>
+        <div class="items"> 
+          <span class="material-icons">done</span> Cyrptocurrencies<br/>
+          <span class="material-icons">done</span> Stocks<br/>
+          <span class="material-icons">done</span> Bonds<br/>
+          <span class="material-icons">done</span> Real Estate<br/>
+          <span class="material-icons">done</span> and more...<br/>
+        </div>
       </div>
     </div>
   </div>
