make repostitory link work

--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
         <div class='w-100'></div>
         <div class=" col-12 d-flex justify-content-center">
           <div class="">
-            (c) 2021 ACB - Repository - Terms - Privacy
+            (c) 2021 ACB -   <a href="https://github.com/acbapp/acb-sales" target="_blank" referrerpolicy="no-referrer">
+              Repository
+            </a>- Terms - Privacy
           </div>
         </div>
       </div>
